2011-05-21  Helmut Eller  <heller@common-lisp.net>

	* slime-snapshot.el: License is GPL.

2011-05-21  Helmut Eller  <heller@common-lisp.net>

	* swank-indentation.lisp: Provide :swank-indentation.
	Reported by Robert Brown

2011-05-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1)
	(lisp-align-keywords-in-calls): Support for aligning keyword
	arguments in calls.
	(lisp-lambda-list-indentation, lisp-indent-lambda-list)
	(run-lisp-indent-tests): Support for turning off the
	fancy lambda-list indentation.

2011-05-18  Nikodemus Siivola  <nikodemus@solipsist>

	* slime-cl-indent.el (lisp-indent-defsetf, run-lisp-indent-tests):
	Better DEFSETF indentation: support both long and short forms.

2011-05-17  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (run-lisp-indent-tests, lisp-indent-loop): Fix
	indentation of function calls, etc, inside loop forms.

2011-05-16  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-loop-indent-forms-like-keywords)
	(common-lisp-loop-part-indentation, run-lisp-indent-tests): Cater
	to loop indentation style that prefers to align forms with keywords.
	Activated by setting lisp-loop-indent-forms-like-keywords to t,
	and lisp-loop-indent-subclauses to nil.

2011-05-15  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1): Better #+
	support.
	(common-lisp-loop-part-indentation): Make newline-and-indent work better
	with non-subclause-aware loop indentation.

2011-05-15  Didier Verna  <didier@xemacs.org>

	* slime-cl-indent.el (test-lisp-indent): Make sure
	indent-tabs-mode is nil in the test buffer. Otherwise, spaces may
	be converted into tabs which would make the tests fail.

2011-05-15  Didier Verna  <didier@xemacs.org>

	* slime-cl-indent.el (lisp-indent-tagbody):
	(lisp-indent-lambda-list): Use back-to-indentation.

2011-05-14  Nikodemus Siivola  <nikodemus@solipsist>
