@@ -1,3 +1,8 @@
+2011-05-26  Stas Boukarev  <stassats@gmail.com>
+
+	* slime-package-fu.el (slime-add-export): Add :export to the end
+	of a defpackage form when there's no :export present. 
+
 2011-05-21  Helmut Eller  <heller@common-lisp.net>
 
 	* slime-snapshot.el: License is GPL.
